--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,10 +10,12 @@
  
 <link href="/css/style.css" rel="stylesheet" type="text/css"> 
 
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script> 
+<script type="text/javascript" src="/js/jquery.min.js"></script> 
 
 <script type="text/javascript" src="/js/jquery.webcam.js"></script>
-<script type="text/javascript" src="/nowjs/now.js"></script>
+<script src="/js/index.js"></script>
+<script src="/js/binary.js"></script>
+
 </head> 
  
 <body>
