--- a/views/view.ejs
+++ b/views/view.ejs
@@ -1,4 +1,77 @@
 <script type="text/javascript" src="/js/view.js"></script>
 <script>var room = "<%=room%>";</script>
-
-<div id="ascii"><div id="last"></div></div>
+<div id="ascii"><div id="last">........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................</div></div>
