--- a/views/broadcast.ejs
+++ b/views/broadcast.ejs
@@ -1,9 +1,82 @@
 <script type="text/javascript" src="/js/broadcast.js"></script>
 <script>var room = "<%=room%>";</script>
-
-<div id="ascii"><div id="last"></div></div>
+<div id="ascii"><div id="last">........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................
+........................................................................................................................................................................................................</div></div>
 
 <div id="start"><button type="button" class="g-button" id="startbtn"><img id="indicator" src="/images/red.png">&nbsp;&nbsp;<span id="btntext">Start Broadcasting</span></button>&nbsp;<button type="button" class="g-button" id="showbtn"><span id="btn2text">Stop Video</span></button></div>
 
-
-<div id="camera"></div>
+<video id="v" style="display: none;" autoplay width="160" height="120"></video>
+<canvas id="c" width="160" height="120"></canvas>
