--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p><p>&nbsp;</p>
-<h1 align="center">Go to http://hack.nowjs.com:8082/view/roomname to view a broadcast</h1>
-<h1 align="center">or http://hack.nowjs.com:8082/broadcast/roomname to create broadcast</h1>
+<h1 align="center">Go to http://ascam.ericzhang.com/view/roomname to view a broadcast</h1>
+<h1 align="center">or http://ascam.ericzhang.com/broadcast/roomname to create broadcast</h1>
 
 </div>
