--- a/views/broadcast.ejs
+++ b/views/broadcast.ejs
@@ -76,7 +76,7 @@
 ........................................................................................................................................................................................................
 ........................................................................................................................................................................................................</div></div>
 
-<div id="start"><button type="button" class="g-button" id="startbtn"><img id="indicator" src="/images/red.png">&nbsp;&nbsp;<span id="btntext">Start Broadcasting</span></button>&nbsp;<button type="button" class="g-button" id="showbtn"><span id="btn2text">Stop Video</span></button></div>
+<div id="start"><button type="button" class="g-button" id="startbtn"><img id="indicator" src="/images/red.png">&nbsp;&nbsp;<span id="btntext">Start Broadcasting</span></button></div>
 
 <video id="v" style="display: none;" autoplay width="160" height="120"></video>
-<canvas id="c" width="160" height="120"></canvas>
+<canvas id="c" width="160" height="120" style="display: none"></canvas>
