--- a/views/view.ejs
+++ b/views/view.ejs
@@ -75,3 +75,5 @@
 ........................................................................................................................................................................................................
 ........................................................................................................................................................................................................
 ........................................................................................................................................................................................................</div></div>
+<div id="start">
+<button type="button" class="g-button" id="showbtn"><span id="btn2text">Color Mode</span></button></div>
