--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,14 @@
-<div id="ascii" style="color: #333">
+<div id="home">
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<h1>Ascam is a ASCII webcam broadcast tool using getUserMedia and BinaryJS</h1>
+<small align="center">No Flash here! Only compatible with Google Chrome 21+</small>
 
-
-
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
+<p align="center">http://ascam.ericzhang.com/view/roomname<br> to view a broadcast</p>
 <p>&nbsp;</p>
-<p>&nbsp;</p><p>&nbsp;</p>
-<h1 align="center">Go to http://ascam.ericzhang.com/view/roomname to view a broadcast</h1>
-<h1 align="center">or http://ascam.ericzhang.com/broadcast/roomname to create broadcast</h1>
+<p align="center">http://ascam.ericzhang.com/broadcast/roomname<br> to create broadcast</p>
 
 </div>
