use cdn binaryjs

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -12,7 +12,7 @@
 
 <script type="text/javascript" src="/js/jquery.min.js"></script> 
 <script src="/js/index.js"></script>
-<script src="/js/binary.js"></script>
+<script src="http://cdn.binaryjs.com/0/binary.min.js"></script>
 
 </head> 
  
